SYMBOL_TABLE/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    BREAK
    CONTINUE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENTIFIER BEGIN pgm_body END
Rule 2     pgm_body -> decl func_declarations
Rule 3     decl -> string_decl decl
Rule 4     decl -> var_decl decl
Rule 5     decl -> empty
Rule 6     string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI
Rule 7     var_decl -> var_type id_list SEMI
Rule 8     var_type -> FLOAT
Rule 9     var_type -> INT
Rule 10    any_type -> var_type
Rule 11    any_type -> VOID
Rule 12    id_list -> IDENTIFIER id_tail
Rule 13    id_tail -> COMM IDENTIFIER id_tail
Rule 14    id_tail -> empty
Rule 15    param_decl_list -> param_decl param_decl_tail
Rule 16    param_decl_list -> empty
Rule 17    param_decl -> var_type IDENTIFIER
Rule 18    param_decl_tail -> COMM param_decl param_decl_tail
Rule 19    param_decl_tail -> empty
Rule 20    func_declarations -> func_decl func_declarations
Rule 21    func_declarations -> empty
Rule 22    func_decl -> FUNCTION any_type IDENTIFIER L_PAR param_decl_list R_PAR BEGIN func_body END
Rule 23    func_body -> decl stmt_list
Rule 24    stmt_list -> stmt stmt_list
Rule 25    stmt_list -> empty
Rule 26    stmt -> base_stmt
Rule 27    stmt -> if_stmt
Rule 28    stmt -> while_stmt
Rule 29    base_stmt -> assign_stmt
Rule 30    base_stmt -> read_stmt
Rule 31    base_stmt -> write_stmt
Rule 32    base_stmt -> return_stmt
Rule 33    assign_stmt -> assign_expr SEMI
Rule 34    assign_expr -> IDENTIFIER EQ_EQ expr
Rule 35    read_stmt -> READ L_PAR id_list R_PAR SEMI
Rule 36    write_stmt -> WRITE L_PAR id_list R_PAR SEMI
Rule 37    return_stmt -> RETURN expr SEMI
Rule 38    expr -> expr_prefix factor
Rule 39    expr_prefix -> expr_prefix factor addop
Rule 40    expr_prefix -> empty
Rule 41    factor -> factor_prefix postfix_expr
Rule 42    factor_prefix -> factor_prefix postfix_expr mulop
Rule 43    factor_prefix -> empty
Rule 44    postfix_expr -> primary
Rule 45    postfix_expr -> call_expr
Rule 46    call_expr -> IDENTIFIER L_PAR expr_list R_PAR
Rule 47    expr_list -> expr expr_list_tail
Rule 48    expr_list -> empty
Rule 49    expr_list_tail -> COMM expr expr_list_tail
Rule 50    expr_list_tail -> empty
Rule 51    primary -> L_PAR expr R_PAR
Rule 52    primary -> IDENTIFIER
Rule 53    primary -> INTLITERAL
Rule 54    primary -> FLOATLITERAL
Rule 55    addop -> PLUS
Rule 56    addop -> MINUS
Rule 57    mulop -> MULT
Rule 58    mulop -> DIV
Rule 59    if_stmt -> IF L_PAR cond R_PAR decl stmt_list else_part ENDIF
Rule 60    else_part -> ELSE decl stmt_list
Rule 61    else_part -> empty
Rule 62    cond -> expr compop expr
Rule 63    compop -> LESS
Rule 64    compop -> MORE
Rule 65    compop -> EQ
Rule 66    compop -> N_EQ
Rule 67    compop -> L_EQ
Rule 68    compop -> R_EQ
Rule 69    while_stmt -> WHILE L_PAR cond R_PAR decl stmt_list ENDWHILE
Rule 70    empty -> <empty>

Terminals, with rules where they appear

BEGIN                : 1 22
BREAK                : 
COMM                 : 13 18 49
COMMENT              : 
CONTINUE             : 
DIV                  : 58
ELSE                 : 60
END                  : 1 22
ENDIF                : 59
ENDWHILE             : 69
EQ                   : 65
EQ_EQ                : 6 34
FLOAT                : 8
FLOATLITERAL         : 54
FUNCTION             : 22
IDENTIFIER           : 1 6 12 13 17 22 34 46 52
IF                   : 59
INT                  : 9
INTLITERAL           : 53
LESS                 : 63
L_EQ                 : 67
L_PAR                : 22 35 36 46 51 59 69
MINUS                : 56
MORE                 : 64
MULT                 : 57
N_EQ                 : 66
PLUS                 : 55
PROGRAM              : 1
READ                 : 35
RETURN               : 37
R_EQ                 : 68
R_PAR                : 22 35 36 46 51 59 69
SEMI                 : 6 7 33 35 36 37
STRING               : 6
STRINGLITERAL        : 6
VOID                 : 11
WHILE                : 69
WRITE                : 36
error                : 

Nonterminals, with rules where they appear

addop                : 39
any_type             : 22
assign_expr          : 33
assign_stmt          : 29
base_stmt            : 26
call_expr            : 45
compop               : 62
cond                 : 59 69
decl                 : 2 3 4 23 59 60 69
else_part            : 59
empty                : 5 14 16 19 21 25 40 43 48 50 61
expr                 : 34 37 47 49 51 62 62
expr_list            : 46
expr_list_tail       : 47 49
expr_prefix          : 38 39
factor               : 38 39
factor_prefix        : 41 42
func_body            : 22
func_decl            : 20
func_declarations    : 2 20
id_list              : 7 35 36
id_tail              : 12 13
if_stmt              : 27
mulop                : 42
param_decl           : 15 18
param_decl_list      : 22
param_decl_tail      : 15 18
pgm_body             : 1
postfix_expr         : 41 42
primary              : 44
program              : 0
read_stmt            : 30
return_stmt          : 32
stmt                 : 24
stmt_list            : 23 24 59 60 69
string_decl          : 3
var_decl             : 4
var_type             : 7 10 17
while_stmt           : 28
write_stmt           : 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENTIFIER BEGIN pgm_body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENTIFIER BEGIN pgm_body END

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAM IDENTIFIER . BEGIN pgm_body END

    BEGIN           shift and go to state 4


state 4

    (1) program -> PROGRAM IDENTIFIER BEGIN . pgm_body END
    (2) pgm_body -> . decl func_declarations
    (3) decl -> . string_decl decl
    (4) decl -> . var_decl decl
    (5) decl -> . empty
    (6) string_decl -> . STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI
    (7) var_decl -> . var_type id_list SEMI
    (70) empty -> .
    (8) var_type -> . FLOAT
    (9) var_type -> . INT

    STRING          shift and go to state 6
    FUNCTION        reduce using rule 70 (empty -> .)
    END             reduce using rule 70 (empty -> .)
    FLOAT           shift and go to state 8
    INT             shift and go to state 7

    decl                           shift and go to state 5
    var_type                       shift and go to state 11
    var_decl                       shift and go to state 9
    string_decl                    shift and go to state 10
    empty                          shift and go to state 12
    pgm_body                       shift and go to state 13

state 5

    (2) pgm_body -> decl . func_declarations
    (20) func_declarations -> . func_decl func_declarations
    (21) func_declarations -> . empty
    (22) func_decl -> . FUNCTION any_type IDENTIFIER L_PAR param_decl_list R_PAR BEGIN func_body END
    (70) empty -> .

    FUNCTION        shift and go to state 14
    END             reduce using rule 70 (empty -> .)

    func_decl                      shift and go to state 15
    func_declarations              shift and go to state 16
    empty                          shift and go to state 17

state 6

    (6) string_decl -> STRING . IDENTIFIER EQ_EQ STRINGLITERAL SEMI

    IDENTIFIER      shift and go to state 18


state 7

    (9) var_type -> INT .

    IDENTIFIER      reduce using rule 9 (var_type -> INT .)


state 8

    (8) var_type -> FLOAT .

    IDENTIFIER      reduce using rule 8 (var_type -> FLOAT .)


state 9

    (4) decl -> var_decl . decl
    (3) decl -> . string_decl decl
    (4) decl -> . var_decl decl
    (5) decl -> . empty
    (6) string_decl -> . STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI
    (7) var_decl -> . var_type id_list SEMI
    (70) empty -> .
    (8) var_type -> . FLOAT
    (9) var_type -> . INT

    STRING          shift and go to state 6
    FUNCTION        reduce using rule 70 (empty -> .)
    END             reduce using rule 70 (empty -> .)
    IF              reduce using rule 70 (empty -> .)
    WHILE           reduce using rule 70 (empty -> .)
    READ            reduce using rule 70 (empty -> .)
    WRITE           reduce using rule 70 (empty -> .)
    RETURN          reduce using rule 70 (empty -> .)
    IDENTIFIER      reduce using rule 70 (empty -> .)
    ENDWHILE        reduce using rule 70 (empty -> .)
    ELSE            reduce using rule 70 (empty -> .)
    ENDIF           reduce using rule 70 (empty -> .)
    FLOAT           shift and go to state 8
    INT             shift and go to state 7

    decl                           shift and go to state 19
    var_type                       shift and go to state 11
    var_decl                       shift and go to state 9
    string_decl                    shift and go to state 10
    empty                          shift and go to state 12

state 10

    (3) decl -> string_decl . decl
    (3) decl -> . string_decl decl
    (4) decl -> . var_decl decl
    (5) decl -> . empty
    (6) string_decl -> . STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI
    (7) var_decl -> . var_type id_list SEMI
    (70) empty -> .
    (8) var_type -> . FLOAT
    (9) var_type -> . INT

    STRING          shift and go to state 6
    FUNCTION        reduce using rule 70 (empty -> .)
    END             reduce using rule 70 (empty -> .)
    IF              reduce using rule 70 (empty -> .)
    WHILE           reduce using rule 70 (empty -> .)
    READ            reduce using rule 70 (empty -> .)
    WRITE           reduce using rule 70 (empty -> .)
    RETURN          reduce using rule 70 (empty -> .)
    IDENTIFIER      reduce using rule 70 (empty -> .)
    ENDWHILE        reduce using rule 70 (empty -> .)
    ELSE            reduce using rule 70 (empty -> .)
    ENDIF           reduce using rule 70 (empty -> .)
    FLOAT           shift and go to state 8
    INT             shift and go to state 7

    decl                           shift and go to state 20
    var_type                       shift and go to state 11
    var_decl                       shift and go to state 9
    string_decl                    shift and go to state 10
    empty                          shift and go to state 12

state 11

    (7) var_decl -> var_type . id_list SEMI
    (12) id_list -> . IDENTIFIER id_tail

    IDENTIFIER      shift and go to state 22

    id_list                        shift and go to state 21

state 12

    (5) decl -> empty .

    FUNCTION        reduce using rule 5 (decl -> empty .)
    END             reduce using rule 5 (decl -> empty .)
    IF              reduce using rule 5 (decl -> empty .)
    WHILE           reduce using rule 5 (decl -> empty .)
    READ            reduce using rule 5 (decl -> empty .)
    WRITE           reduce using rule 5 (decl -> empty .)
    RETURN          reduce using rule 5 (decl -> empty .)
    IDENTIFIER      reduce using rule 5 (decl -> empty .)
    ENDWHILE        reduce using rule 5 (decl -> empty .)
    ELSE            reduce using rule 5 (decl -> empty .)
    ENDIF           reduce using rule 5 (decl -> empty .)


state 13

    (1) program -> PROGRAM IDENTIFIER BEGIN pgm_body . END

    END             shift and go to state 23


state 14

    (22) func_decl -> FUNCTION . any_type IDENTIFIER L_PAR param_decl_list R_PAR BEGIN func_body END
    (10) any_type -> . var_type
    (11) any_type -> . VOID
    (8) var_type -> . FLOAT
    (9) var_type -> . INT

    VOID            shift and go to state 26
    FLOAT           shift and go to state 8
    INT             shift and go to state 7

    any_type                       shift and go to state 25
    var_type                       shift and go to state 24

state 15

    (20) func_declarations -> func_decl . func_declarations
    (20) func_declarations -> . func_decl func_declarations
    (21) func_declarations -> . empty
    (22) func_decl -> . FUNCTION any_type IDENTIFIER L_PAR param_decl_list R_PAR BEGIN func_body END
    (70) empty -> .

    FUNCTION        shift and go to state 14
    END             reduce using rule 70 (empty -> .)

    func_decl                      shift and go to state 15
    func_declarations              shift and go to state 27
    empty                          shift and go to state 17

state 16

    (2) pgm_body -> decl func_declarations .

    END             reduce using rule 2 (pgm_body -> decl func_declarations .)


state 17

    (21) func_declarations -> empty .

    END             reduce using rule 21 (func_declarations -> empty .)


state 18

    (6) string_decl -> STRING IDENTIFIER . EQ_EQ STRINGLITERAL SEMI

    EQ_EQ           shift and go to state 28


state 19

    (4) decl -> var_decl decl .

    FUNCTION        reduce using rule 4 (decl -> var_decl decl .)
    END             reduce using rule 4 (decl -> var_decl decl .)
    IF              reduce using rule 4 (decl -> var_decl decl .)
    WHILE           reduce using rule 4 (decl -> var_decl decl .)
    READ            reduce using rule 4 (decl -> var_decl decl .)
    WRITE           reduce using rule 4 (decl -> var_decl decl .)
    RETURN          reduce using rule 4 (decl -> var_decl decl .)
    IDENTIFIER      reduce using rule 4 (decl -> var_decl decl .)
    ENDWHILE        reduce using rule 4 (decl -> var_decl decl .)
    ELSE            reduce using rule 4 (decl -> var_decl decl .)
    ENDIF           reduce using rule 4 (decl -> var_decl decl .)


state 20

    (3) decl -> string_decl decl .

    FUNCTION        reduce using rule 3 (decl -> string_decl decl .)
    END             reduce using rule 3 (decl -> string_decl decl .)
    IF              reduce using rule 3 (decl -> string_decl decl .)
    WHILE           reduce using rule 3 (decl -> string_decl decl .)
    READ            reduce using rule 3 (decl -> string_decl decl .)
    WRITE           reduce using rule 3 (decl -> string_decl decl .)
    RETURN          reduce using rule 3 (decl -> string_decl decl .)
    IDENTIFIER      reduce using rule 3 (decl -> string_decl decl .)
    ENDWHILE        reduce using rule 3 (decl -> string_decl decl .)
    ELSE            reduce using rule 3 (decl -> string_decl decl .)
    ENDIF           reduce using rule 3 (decl -> string_decl decl .)


state 21

    (7) var_decl -> var_type id_list . SEMI

    SEMI            shift and go to state 29


state 22

    (12) id_list -> IDENTIFIER . id_tail
    (13) id_tail -> . COMM IDENTIFIER id_tail
    (14) id_tail -> . empty
    (70) empty -> .

    COMM            shift and go to state 30
    SEMI            reduce using rule 70 (empty -> .)
    R_PAR           reduce using rule 70 (empty -> .)

    empty                          shift and go to state 31
    id_tail                        shift and go to state 32

state 23

    (1) program -> PROGRAM IDENTIFIER BEGIN pgm_body END .

    $end            reduce using rule 1 (program -> PROGRAM IDENTIFIER BEGIN pgm_body END .)


state 24

    (10) any_type -> var_type .

    IDENTIFIER      reduce using rule 10 (any_type -> var_type .)


state 25

    (22) func_decl -> FUNCTION any_type . IDENTIFIER L_PAR param_decl_list R_PAR BEGIN func_body END

    IDENTIFIER      shift and go to state 33


state 26

    (11) any_type -> VOID .

    IDENTIFIER      reduce using rule 11 (any_type -> VOID .)


state 27

    (20) func_declarations -> func_decl func_declarations .

    END             reduce using rule 20 (func_declarations -> func_decl func_declarations .)


state 28

    (6) string_decl -> STRING IDENTIFIER EQ_EQ . STRINGLITERAL SEMI

    STRINGLITERAL   shift and go to state 34


state 29

    (7) var_decl -> var_type id_list SEMI .

    STRING          reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    FLOAT           reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    INT             reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    IF              reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    WHILE           reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    READ            reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    WRITE           reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    RETURN          reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    IDENTIFIER      reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    ENDIF           reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    END             reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    FUNCTION        reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    ENDWHILE        reduce using rule 7 (var_decl -> var_type id_list SEMI .)
    ELSE            reduce using rule 7 (var_decl -> var_type id_list SEMI .)


state 30

    (13) id_tail -> COMM . IDENTIFIER id_tail

    IDENTIFIER      shift and go to state 35


state 31

    (14) id_tail -> empty .

    SEMI            reduce using rule 14 (id_tail -> empty .)
    R_PAR           reduce using rule 14 (id_tail -> empty .)


state 32

    (12) id_list -> IDENTIFIER id_tail .

    SEMI            reduce using rule 12 (id_list -> IDENTIFIER id_tail .)
    R_PAR           reduce using rule 12 (id_list -> IDENTIFIER id_tail .)


state 33

    (22) func_decl -> FUNCTION any_type IDENTIFIER . L_PAR param_decl_list R_PAR BEGIN func_body END

    L_PAR           shift and go to state 36


state 34

    (6) string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL . SEMI

    SEMI            shift and go to state 37


state 35

    (13) id_tail -> COMM IDENTIFIER . id_tail
    (13) id_tail -> . COMM IDENTIFIER id_tail
    (14) id_tail -> . empty
    (70) empty -> .

    COMM            shift and go to state 30
    SEMI            reduce using rule 70 (empty -> .)
    R_PAR           reduce using rule 70 (empty -> .)

    empty                          shift and go to state 31
    id_tail                        shift and go to state 38

state 36

    (22) func_decl -> FUNCTION any_type IDENTIFIER L_PAR . param_decl_list R_PAR BEGIN func_body END
    (15) param_decl_list -> . param_decl param_decl_tail
    (16) param_decl_list -> . empty
    (17) param_decl -> . var_type IDENTIFIER
    (70) empty -> .
    (8) var_type -> . FLOAT
    (9) var_type -> . INT

    R_PAR           reduce using rule 70 (empty -> .)
    FLOAT           shift and go to state 8
    INT             shift and go to state 7

    var_type                       shift and go to state 39
    param_decl_list                shift and go to state 40
    param_decl                     shift and go to state 41
    empty                          shift and go to state 42

state 37

    (6) string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .

    STRING          reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    FLOAT           reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    INT             reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    IF              reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    WHILE           reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    READ            reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    WRITE           reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    RETURN          reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    IDENTIFIER      reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    END             reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    ENDIF           reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    FUNCTION        reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    ENDWHILE        reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)
    ELSE            reduce using rule 6 (string_decl -> STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI .)


state 38

    (13) id_tail -> COMM IDENTIFIER id_tail .

    SEMI            reduce using rule 13 (id_tail -> COMM IDENTIFIER id_tail .)
    R_PAR           reduce using rule 13 (id_tail -> COMM IDENTIFIER id_tail .)


state 39

    (17) param_decl -> var_type . IDENTIFIER

    IDENTIFIER      shift and go to state 43


state 40

    (22) func_decl -> FUNCTION any_type IDENTIFIER L_PAR param_decl_list . R_PAR BEGIN func_body END

    R_PAR           shift and go to state 44


state 41

    (15) param_decl_list -> param_decl . param_decl_tail
    (18) param_decl_tail -> . COMM param_decl param_decl_tail
    (19) param_decl_tail -> . empty
    (70) empty -> .

    COMM            shift and go to state 46
    R_PAR           reduce using rule 70 (empty -> .)

    param_decl_tail                shift and go to state 45
    empty                          shift and go to state 47

state 42

    (16) param_decl_list -> empty .

    R_PAR           reduce using rule 16 (param_decl_list -> empty .)


state 43

    (17) param_decl -> var_type IDENTIFIER .

    COMM            reduce using rule 17 (param_decl -> var_type IDENTIFIER .)
    R_PAR           reduce using rule 17 (param_decl -> var_type IDENTIFIER .)


state 44

    (22) func_decl -> FUNCTION any_type IDENTIFIER L_PAR param_decl_list R_PAR . BEGIN func_body END

    BEGIN           shift and go to state 48


state 45

    (15) param_decl_list -> param_decl param_decl_tail .

    R_PAR           reduce using rule 15 (param_decl_list -> param_decl param_decl_tail .)


state 46

    (18) param_decl_tail -> COMM . param_decl param_decl_tail
    (17) param_decl -> . var_type IDENTIFIER
    (8) var_type -> . FLOAT
    (9) var_type -> . INT

    FLOAT           shift and go to state 8
    INT             shift and go to state 7

    param_decl                     shift and go to state 49
    var_type                       shift and go to state 39

state 47

    (19) param_decl_tail -> empty .

    R_PAR           reduce using rule 19 (param_decl_tail -> empty .)


state 48

    (22) func_decl -> FUNCTION any_type IDENTIFIER L_PAR param_decl_list R_PAR BEGIN . func_body END
    (23) func_body -> . decl stmt_list
    (3) decl -> . string_decl decl
    (4) decl -> . var_decl decl
    (5) decl -> . empty
    (6) string_decl -> . STRING IDENTIFIER EQ_EQ STRINGLITERAL SEMI
    (7) var_decl -> . var_type id_list SEMI
    (70) empty -> .
    (8) var_type -> . FLOAT
    (9) var_type -> . INT

    STRING          shift and go to state 6
    IF              reduce using rule 70 (empty -> .)
    WHILE           reduce using rule 70 (empty -> .)
    READ            reduce using rule 70 (empty -> .)
    WRITE           reduce using rule 70 (empty -> .)
    RETURN          reduce using rule 70 (empty -> .)
    IDENTIFIER      reduce using rule 70 (empty -> .)
    END             reduce using rule 70 (empty -> .)
    FLOAT           shift and go to state 8
    INT             shift and go to state 7

    decl                           shift and go to state 50
    var_type                       shift and go to state 11
    func_body                      shift and go to state 51
    var_decl                       shift and go to state 9
    empty                          shift and go to state 12
    string_decl                    shift and go to state 10

state 49

    (18) param_decl_tail -> COMM param_decl . param_decl_tail
    (18) param_decl_tail -> . COMM param_decl param_decl_tail
    (19) param_decl_tail -> . empty
    (70) empty -> .

    COMM            shift and go to state 46
    R_PAR           reduce using rule 70 (empty -> .)

    param_decl_tail                shift and go to state 52
    empty                          shift and go to state 47

state 50

    (23) func_body -> decl . stmt_list
    (24) stmt_list -> . stmt stmt_list
    (25) stmt_list -> . empty
    (26) stmt -> . base_stmt
    (27) stmt -> . if_stmt
    (28) stmt -> . while_stmt
    (70) empty -> .
    (29) base_stmt -> . assign_stmt
    (30) base_stmt -> . read_stmt
    (31) base_stmt -> . write_stmt
    (32) base_stmt -> . return_stmt
    (59) if_stmt -> . IF L_PAR cond R_PAR decl stmt_list else_part ENDIF
    (69) while_stmt -> . WHILE L_PAR cond R_PAR decl stmt_list ENDWHILE
    (33) assign_stmt -> . assign_expr SEMI
    (35) read_stmt -> . READ L_PAR id_list R_PAR SEMI
    (36) write_stmt -> . WRITE L_PAR id_list R_PAR SEMI
    (37) return_stmt -> . RETURN expr SEMI
    (34) assign_expr -> . IDENTIFIER EQ_EQ expr

    END             reduce using rule 70 (empty -> .)
    IF              shift and go to state 65
    WHILE           shift and go to state 57
    READ            shift and go to state 54
    WRITE           shift and go to state 67
    RETURN          shift and go to state 53
    IDENTIFIER      shift and go to state 61

    stmt_list                      shift and go to state 66
    if_stmt                        shift and go to state 68
    assign_expr                    shift and go to state 60
    read_stmt                      shift and go to state 55
    stmt                           shift and go to state 64
    assign_stmt                    shift and go to state 59
    base_stmt                      shift and go to state 56
    while_stmt                     shift and go to state 69
    return_stmt                    shift and go to state 58
    write_stmt                     shift and go to state 63
    empty                          shift and go to state 62

state 51

    (22) func_decl -> FUNCTION any_type IDENTIFIER L_PAR param_decl_list R_PAR BEGIN func_body . END

    END             shift and go to state 70


state 52

    (18) param_decl_tail -> COMM param_decl param_decl_tail .

    R_PAR           reduce using rule 18 (param_decl_tail -> COMM param_decl param_decl_tail .)


state 53

    (37) return_stmt -> RETURN . expr SEMI
    (38) expr -> . expr_prefix factor
    (39) expr_prefix -> . expr_prefix factor addop
    (40) expr_prefix -> . empty
    (70) empty -> .

    L_PAR           reduce using rule 70 (empty -> .)
    IDENTIFIER      reduce using rule 70 (empty -> .)
    INTLITERAL      reduce using rule 70 (empty -> .)
    FLOATLITERAL    reduce using rule 70 (empty -> .)

    expr                           shift and go to state 72
    empty                          shift and go to state 73
    expr_prefix                    shift and go to state 71

state 54

    (35) read_stmt -> READ . L_PAR id_list R_PAR SEMI

    L_PAR           shift and go to state 74


state 55

    (30) base_stmt -> read_stmt .

    IF              reduce using rule 30 (base_stmt -> read_stmt .)
    WHILE           reduce using rule 30 (base_stmt -> read_stmt .)
    READ            reduce using rule 30 (base_stmt -> read_stmt .)
    WRITE           reduce using rule 30 (base_stmt -> read_stmt .)
    RETURN          reduce using rule 30 (base_stmt -> read_stmt .)
    IDENTIFIER      reduce using rule 30 (base_stmt -> read_stmt .)
    ENDIF           reduce using rule 30 (base_stmt -> read_stmt .)
    END             reduce using rule 30 (base_stmt -> read_stmt .)
    ENDWHILE        reduce using rule 30 (base_stmt -> read_stmt .)
    ELSE            reduce using rule 30 (base_stmt -> read_stmt .)


state 56

    (26) stmt -> base_stmt .

    IF              reduce using rule 26 (stmt -> base_stmt .)
    WHILE           reduce using rule 26 (stmt -> base_stmt .)
    READ            reduce using rule 26 (stmt -> base_stmt .)
    WRITE           reduce using rule 26 (stmt -> base_stmt .)
    RETURN          reduce using rule 26 (stmt -> base_stmt .)
    IDENTIFIER      reduce using rule 26 (stmt -> base_stmt .)
    END             reduce using rule 26 (stmt -> base_stmt .)
    ENDWHILE        reduce using rule 26 (stmt -> base_stmt .)
    ELSE            reduce using rule 26 (stmt -> base_stmt .)
    ENDIF           reduce using rule 26 (stmt -> base_stmt .)


state 57

    (69) while_stmt -> WHILE . L_PAR cond R_PAR decl stmt_list ENDWHILE

    L_PAR           shift and go to state 75


state 58
